--- a/WordLearner.FrontendBlazor/Components/Pages/Home.razor
+++ b/WordLearner.FrontendBlazor/Components/Pages/Home.razor
@@ -12,6 +12,9 @@
         What this word means?
     </p>
 
+    @{
+       // TODO: create a component for getting a new word
+    }
     @if(Word != null)
     {
         <h3>@Word.Content</h3>
