--- a/WordLearner.FrontendBlazor/Components/Layout/MainLayout.razor
+++ b/WordLearner.FrontendBlazor/Components/Layout/MainLayout.razor
@@ -4,6 +4,11 @@
     @Body
 </div>
 
+<footer>
+    <div class="container">
+        data source: https://github.com/SMenigat/thousand-most-common-words (1000mostcommonwords.com)
+    </div>
+</footer>
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
