add language switcher

--- a/WordLearner.FrontendBlazor/Components/Layout/MainLayout.razor
+++ b/WordLearner.FrontendBlazor/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <footer>
     <div class="container">
-        data source: https://github.com/SMenigat/thousand-most-common-words (1000mostcommonwords.com)
+        <a href="https://github.com/SMenigat/thousand-most-common-words" target="_blank">Data source</a> - from 1000mostcommonwords.com
     </div>
 </footer>
 <div id="blazor-error-ui">
