--- a/WordLearner.FrontendBlazor/Components/App.razor
+++ b/WordLearner.FrontendBlazor/Components/App.razor
@@ -6,11 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@picocss/pico@2/css/pico.min.css" />
-    <link rel="stylesheet" href="WordLearner.FrontendBlazor.styles.css" />
+    <link rel="stylesheet" href="/app.css" />
     <HeadOutlet />
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/">Word Learn</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
