--- a/WordLearner.FrontendBlazor/Components/Apps/QuizApp/GetItemButton.razor
+++ b/WordLearner.FrontendBlazor/Components/Apps/QuizApp/GetItemButton.razor
@@ -1,5 +1,5 @@
 ﻿@rendermode InteractiveServer
-<button @onclick="ButtonClicked">@Text</button>
+<button class="secondary" @onclick="ButtonClicked">@Text</button>
 
 @code {
     [Parameter]
