--- a/WordLearner.FrontendBlazor/Components/Apps/QuizApp/QuestionItem.razor
+++ b/WordLearner.FrontendBlazor/Components/Apps/QuizApp/QuestionItem.razor
@@ -1,4 +1,5 @@
-﻿@using WordLearner.Domain.WordAggregate
+﻿@rendermode InteractiveServer
+@using WordLearner.Domain.WordAggregate
 @if(Question != null)
 {
     <details style="padding-inline:32px;min-height:50px">
